--- a/geoportal/src/main/webapp/app/main/templates/AboutPanel.html
+++ b/geoportal/src/main/webapp/app/main/templates/AboutPanel.html
@@ -31,7 +31,7 @@ Enter any text in the Search box (upper left); the content searched includes tit
 <h3>Technical Information</h3>
 <p>The catalog search is implemented using the ESRI open-source Geoportal Software, v. 2.5, customized in an <a href=https://github.com/iedadata/geoportal-server-catalog>IEDA fork</a> of the ESRI gitHub repository. Metadata are harvested into the catalog as ISO 19139 xml files from <a href=http://get.iedadata.org/metadata/iso>web accessible folders</a>, and metadata are available as a web page, ISO 19139 XML, or JSON via links with each search result. </p>
 <p>
-The catalog can be searched via API using the OGC Catalog Service for the Web (CSW), version 3.0.0 or OpenSearch.  Capabilities are described in the <a href=http://catalog-dev.iedadata.org:8080/geoportal/csw?service=CSW&request=GetCapabilities> CSW getCapabilities document</a> and the <a href=http://catalog-dev.iedadata.org:8080/geoportal/opensearch/description>OpenSearch description </a> 
+The catalog can be searched via API using the OGC Catalog Service for the Web (CSW), version 3.0.0 or OpenSearch.  Capabilities are described in the <a href=http://catalog.iedadata.org/geoportal/csw?service=CSW&request=GetCapabilities> CSW getCapabilities document</a> and the <a href=http://catalog.iedadata.org/geoportal/opensearch/description>OpenSearch description </a> 
  </p>
  <p>
 The APIs return metadata in CSW records or Atom XML format, both of which contain basic Dublin Core metadata elements.
